--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,10 @@ name: pysmap
 dependencies:
 - python=3.5
 - pip
-- pylint
+- pylint=1.5.4
+- bokeh=0.11.1
+- pandas=0.18.1
+- pytz=2016.4
 - pip:
   - smappdragon>=0.0.21
   
