--- a/environment.yml
+++ b/environment.yml
@@ -3,8 +3,10 @@ dependencies:
 - python=3.6
 - bokeh
 - pytz
+- pandas
 - pip:
-  - smappdragon==0.0.41
+  - smappdragon>=0.0.41
   - langdetect>=1.0.6
   - stop-words>=2015.2.23.1
-  
+  - networkx>=1.11
+  - pymongo>=3.2.2
