--- a/environment.yml
+++ b/environment.yml
@@ -11,3 +11,7 @@ dependencies:
   - networkx>=1.11
   - pymongo>=3.2.2
   - matplotlib>=2.0.0
+  - keras>=2.0.8
+  - python-opencv>=3.3.0.9
+  - tensorflow>=1.3.0
+  - h5py>=2.7.0
